<resources>
    <string name="app_name">Connect 4</string>

    //Activity_Main
    <string name="App_name">MENÚ PRINCIPAL</string>
    <string name="help">Ajuda</string>
    <string name="Start_Game">Començar Partida</string>
    <string name="Go_DB">Consultar Partides</string>
    <string name="Exit">Sortir</string>

    //Settings
    <string name="Config">CONFIGURACIO</string>
    <string name="Start">Start</string>
    <string name="Alias">Alias identificatiu</string>
    <string name="Mida">Mida Graella</string>
    <string name="Temps">Control del temps</string>

    <string name="seconds">25</string>
    <string name="error_init">The game could not be started</string>
    <string name="aliasMenu">Alias</string>
    <string name="boardMenu">Board</string>
    <string name="timeMenu">Time control</string>

    //Help
    <string name="Tittle_Help">Benvinguts al joc del CONNECT 4!</string>
    <string name="Help">AJUDA</string>
    <string name="Text_Help">El joc consisteix en anar introduint fitxer en un tauler vertical amb el objectiu de alinear 4 consecutives del color
        assignat al jugador (roig) abans que el teu oponent. \n
        A cada torn, el jugador introdueix una fitxa a la columna triada (sempre i quan no estigui completa), i aquesta cau a la posició més baixa possible. \n
        Guanya la partida el jugador que primer aconsegueix alinear 4 fitxes consecutives del seu color en horitzontal, vertical o diagonal. \n
        Si totes les columnes estan plenes i ningú ha aconseguit alinear-ne 4 fitxes, hi ha empat.</string>
    <string name="Return">Torna al Menú Principal</string>

    //Results
    <string name="Results">GAME RESULTS</string>
    <string name="Dia_Hora">Day and Time</string>
    <string name="Log">Log Value</string>
    <string name="Email">E-mail destination</string>
    <string name="Send">Send e-mail</string>
    <string name="New">New Game</string>

    //Try_Game
    <string name="Prueba">PROVA</string>

    //SQLite DATABASE
    <string name="back">GO BACK</string>
    <string name="delete">DELETE</string>
    <string name="check_matches">GAMES DATABASE</string>
    <string name="boardSize">Board size:</string>
    <string name="detailReg">Match details</string>
    <string name="defaultId">#</string>
    <string name="alias">Alias:</string>
    <string name="dateTimeReg">Date and time:</string>
    <string name="default_number">0</string>
    <string name="timeIdentifier">Time control:</string>
    <string name="numBlack">Num. Black:</string>
    <string name="numWhite">Num. White:</string>
    <string name="totalTime">Total time:</string>
    <string name="leftTime">Time Left:</string>
    <string name="stateResult">Match results: </string>
    <string name="affirmative">Yes</string>
    <string name="negative">No</string>
    <string name="log_title">LOG of the match</string>

    <string name="grid_7">60</string>
    <string name="grid_6">45</string>
    <string name="grid_5">30</string>

    //Toast
    <string name="toast_win">HAS GUANYAT !!</string>
    <string name="toast_lose">HAS PERDUT !!</string>
    <string name="toast_draw">HAS EMPATAT !!</string>
    <string name="toast_out_time">S\'HA ACABAT EL TEMPS !!</string>

    //Preferences
    <string name="P_Alias">Alias</string>
    <string name="P_Alias_info">Alias del jugador</string>
    <string name="P_Time">Control del Temps</string>
    <string name="P_Time_info">Marcar per a limitar el temps de la partida</string>
    <string name="P_Grill">Mida Graella</string>
    <string name="P_Grill_info">Mida de la graella del joc</string>
</resources>
