<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/ajuda1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="Show_HelpActivity"
            android:text="@string/help" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/començar1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Start_Game"
            android:onClick="Go_Settings"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/sortir1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Exit" />
    </LinearLayout>


</LinearLayout>